final update visible